# qmlbind20

./: .gitignore  CMakeLists.txt  Puff.toml  README.md  pppm.toml  qmlbind20Config.cmake.in
.github/workflows/: mirror-to-gitlab.yml
.puff/: recipe.yml
include/qmlbind20/: qmlbind20.h
src/c++/: component.c++  module.c++  qmlbind20.c++  utils.h
tests/: qrc.qrc  test-main.c++  test.qml
